decoupled group formatting from message processing