@@ -18,48 +18,45 @@ public final class ChatFormatService {
     private static final Pattern HEX_PATTERN = Pattern.compile("^/?#[a-f0-9]{6}([a-f0-9]{2})?$");
 
     private static final Set<String> COLORS = Set.of(
-            "black","dark_blue","dark_green","dark_aqua","dark_red","dark_purple","gold",
-            "gray","dark_gray","blue","green","aqua","red","light_purple","yellow","white"
+            "black", "dark_blue", "dark_green", "dark_aqua", "dark_red", "dark_purple", "gold",
+            "gray", "dark_gray", "blue", "green", "aqua", "red", "light_purple", "yellow", "white"
     );
 
     private static final Set<String> FORMATS = Set.of(
-            "bold","italic","underlined","strikethrough","obfuscated", "rainbow"
+            "bold", "italic", "underlined", "strikethrough", "obfuscated", "rainbow"
     );
 
     public ChatFormatService(AirCore plugin) {
         this.plugin = plugin;
     }
 
-    public Component format(Player player, String message) {
-        if (!plugin.config().groupFormatEnabled()) {
-            return null;
-        }
+    public Component applyFeatures(Player player, Component base) {
+        Component processed = plugin.chat().urls().apply(player, base);
+        processed = plugin.chat().mentions().processMentions(player, processed);
+        processed = plugin.chat().displayTags().apply(player, processed);
+        return processed;
+    }
 
-        String fmt = resolveGroupFormat(player);
-        if (fmt == null || fmt.isBlank()) {
-            return null;
-        }
+    public Component formatFull(Player player, String rawMessage) {
+        String sanitized = sanitizeForChat(player, rawMessage);
+        if (sanitized.replaceAll("<[^>]+>", "").trim().isEmpty()) return Component.empty();
 
-        String sanitized = sanitizeForChat(player, message);
+        String formatString = resolveGroupFormat(player);
+        if (formatString == null) return null;
 
-        if (sanitized.replaceAll("<[^>]+>", "").trim().isEmpty()) {
-            return Component.empty();
-        }
-
-        Component base = MessageUtil.mini(player, fmt, Map.of("player", player.getName()), true);
+        Component messageComponent = MessageUtil.mini(player, sanitized, Map.of(), false);
+        Component base = MessageUtil.mini(player, formatString, Map.of("player", player.getName()), true);
 
         if (base == null) return Component.empty();
 
-        Component messageComponent = MessageUtil.mini(player, sanitized, Map.of(), false);
+        Component full = base.replaceText(b -> b.matchLiteral("%message%").replacement(messageComponent));
+        return applyFeatures(player, full);
+    }
 
-        Component formatted = base.replaceText(builder ->
-                builder.matchLiteral("%message%").replacement(messageComponent)
-        );
-
-        Component processed = plugin.chat().urls().apply(player, formatted);
-        processed = plugin.chat().mentions().processMentions(player, processed);
-
-        return plugin.chat().displayTags().apply(player, processed);
+    public Component processMessageOnly(Player player, String rawMessage) {
+        String sanitized = sanitizeForChat(player, rawMessage);
+        Component msg = MessageUtil.mini(player, sanitized, Map.of(), false);
+        return applyFeatures(player, msg);
     }
 
     private String resolveGroupFormat(Player player) {
@@ -75,7 +72,6 @@ public final class ChatFormatService {
 
     public String sanitizeForChat(Player player, String raw) {
         if (raw == null || raw.isBlank()) return "";
-
         final boolean allColors = player.hasPermission("aircore.chat.color") || player.hasPermission("aircore.chat.color.*");
         final boolean allFormats = player.hasPermission("aircore.chat.format") || player.hasPermission("aircore.chat.format.*");
 
@@ -85,32 +81,17 @@ public final class ChatFormatService {
 
         while (m.find()) {
             sb.append(raw, last, m.start());
-
             String content = m.group(1).trim();
             String lower = content.toLowerCase();
-
             String effectiveTag = lower.startsWith("/") ? lower.substring(1) : lower;
-            boolean allowed = false;
+            boolean allowed = HEX_PATTERN.matcher(lower).matches() ? allColors :
+                    COLORS.contains(effectiveTag) ? (allColors || player.hasPermission("aircore.chat.color." + effectiveTag)) :
+                            FORMATS.contains(effectiveTag) && (allFormats || player.hasPermission("aircore.chat.format." + effectiveTag));
 
-            if (HEX_PATTERN.matcher(lower).matches()) {
-                allowed = allColors;
-            }
-            else if (COLORS.contains(effectiveTag)) {
-                allowed = allColors || player.hasPermission("aircore.chat.color." + effectiveTag);
-            }
-            else if (FORMATS.contains(effectiveTag)) {
-                allowed = allFormats || player.hasPermission("aircore.chat.format." + effectiveTag);
-            }
-
-            if (allowed) {
-                sb.append('<').append(content).append('>');
-            } else {
-                sb.append('\\').append('<').append(content).append('>');
-            }
-
+            if (allowed) sb.append('<').append(content).append('>');
+            else sb.append('\\').append('<').append(content).append('>');
             last = m.end();
         }
-
         return sb.append(raw.substring(last)).toString();
     }
 }
